--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">Home</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/about">About</a></li>
+            </ul>
         </div>
     </div>
 </div>
