db integration added

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,10 @@
 
 {% block title %}Index{% endblock %}
 
+<div style="background-color: #f2f2f2; padding: 15px; margin-bottom: 30px; margin-top: 20px;">
 {% block page_content %}
-    <div style="background-color: #f2f2f2; padding: 15px; margin-bottom: 30px; margin-top: 20px;">
+    <div>
         <h3>Index Page</h3>
     </div>
 {% endblock %}
+<div>
