--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <div style="background-color: #f2f2f2; padding: 15px; margin-bottom: 30px; margin-top: 20px;">
 {% block page_content %}
     <div>
-        <h3>Index Page</h3>
+        <h3 style="color:#f2f2f2">Index Page</h3>
     </div>
 {% endblock %}
 <div>
