--- a/templates/base.html
+++ b/templates/base.html
@@ -2,10 +2,11 @@
 
 {% block head %}
     {{ super() }}
+    <link rel="stylesheet" href="static/style.css">
 {% endblock %}
 
 {% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar navbar-inverse navbar-static-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle">
