--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,10 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="/browse">Browse</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/search">Search</a></li>
             </ul>
             <ul class="nav navbar-nav">
                 <li><a href="/about">About</a></li>
