no slash in example

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 {% block title %}About{% endblock %}
 
 {% block page_content %}
-    <div style="background-color: #f2f2f2; padding: 15px; margin-bottom: 30px; margin-top: 20px;">
+    <div>
         <h3>About</h3>
     </div>
 {% endblock %}
