fill tables with test data

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,9 +32,11 @@
 </div>
 {% endblock %}
 
+<div class="cross-bg">
 {% block content %}
 <div class="container">
     {% block page_content %}{% endblock %}
 </div>
 {% endblock %}
+</div>
 
