--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -4,8 +4,10 @@
 {% block title %}Sign up{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
+<div>
     <h1>Sign up</h1>
 </div>
-{{ wtf.quick_form(form) }}
+<div class="col-md-3">
+    {{ wtf.quick_form(form) }}
+</div>
 {% endblock %}
