--- a/app/templates/browse.html
+++ b/app/templates/browse.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Browse{% endblock %}
+{% block title %}{% endblock %}
 
 {% block page_content %}
     <div>
