userpage, placeholder on main page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="/about">About</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li style="float:right"><a class="active" href="#user">Log in</a>
+            </ul>
         </div>
     </div>
 </div>
@@ -39,4 +42,3 @@
 </div>
 {% endblock %}
 </div>
-
