--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,14 @@
 {% block page_content %}
     <div>
         <h3 style="color:#f2f2f2">Index Page</h3>
+        <div class="text_preview">
+            <h4>text.title</h4>
+            <h5>text.get_fandoms</h5>
+            <p>text.get_tags</p>
+            <p>text.age_restr</p>
+            <p>text.lang</p>
+            <p>text.descr</p>
+        </div>
     </div>
 {% endblock %}
 <div>
