--- a/app/templates/temp.html
+++ b/app/templates/temp.html
@@ -1,7 +1,7 @@
 {% block text_preview %}
-<div class="container">
-    <h5>{{ text.title }}</h5>
-    <h6>{{ text.get_fandoms }}</h6>
+<div class="text_preview">
+    <h4>{{ text.title }}</h4>
+    <h5>{{ text.get_fandoms }}</h5>
     <p>{{ text.get_tags }}</p>
     <p>{{ text.age_restr }}</p>
     <p>{{ text.lang }}</p>
