--- a/app/static/style.css
+++ b/app/static/style.css
@@ -11,6 +11,10 @@ h3 {
     color: #cccccc;
 }
 
+h4 {
+    color: #cccccc;
+}
+
 h5 {
     color: #cccccc;
 }
@@ -32,4 +36,12 @@ h6 {
     width: 75%;
     margin-left: auto;
     margin-right: auto;
+    background-color:#474646;
+    text-align: justify;
+    padding: 10px 30px 10px 20px;
+    border-left: 10px coral;
+}
+
+.text_preview p {
+    color: #cccccc;
 }
