--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,16 +4,11 @@
 
 <div style="background-color: #f2f2f2; padding: 15px; margin-bottom: 30px; margin-top: 20px;">
 {% block page_content %}
-    <div>
-        <h3 style="color:#f2f2f2">Index Page</h3>
-        <div class="text_preview">
-            <h4>text.title</h4>
-            <h5>text.get_fandoms</h5>
-            <p>text.get_tags</p>
-            <p>text.age_restr</p>
-            <p>text.lang</p>
-            <p>text.descr</p>
-        </div>
-    </div>
+<div style="width:75%; margin-left:auto; margin-right:auto;">
+    <h2>Последние работы</h2>
+</div>
+{% include "_post.html" %}
+{% include "_post.html" %}
+{% include "_post.html" %}
 {% endblock %}
-<div>
+</div>
