--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,8 +4,8 @@
 
 <div style="background-color: #f2f2f2; padding: 15px; margin-bottom: 30px; margin-top: 20px;">
 {% block page_content %}
-    <div>
-        <h3 style="color:#f2f2f2">Search Page</h3>
+    <div style="width:75%; margin-left:auto; margin-right:auto;">
+        <h2 style="color:#f2f2f2">Поиск</h2>
         <div class="search-container">
             <h6>Работа по выбранному фандому:</h6>
             <input list="fandoms" name="fandom">
@@ -25,8 +25,8 @@
             <input type="checkbox" name="PG-13"><label>PG-13</label>
             <input type="checkbox" name="R"><label>R</label>
             <input type="checkbox" name="NC"><label>NC</label>
-            <button>Искать</button>
         </div>
+        <button>Искать</button>
     </div>
 {% endblock %}
 <div>
