--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -5,9 +5,9 @@
 
 {% block page_content %}
 <div>
-    <h1>Sign up</h1>
+    <h1>Регистрация</h1>
 </div>
-<div class="col-md-3">
+<div class="col-md3">
     {{ wtf.quick_form(form) }}
 </div>
 {% endblock %}
