--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,8 +15,11 @@
             <ul class="nav navbar-nav">
                 <li><a href="/search">Поиск</a></li>
             </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="/upload">Загрузить</a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#user">Log in</a></li>
+                <li><a href="/sign_up">Log in</a></li>
             </ul>
         </div>
     </div>
