--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,13 +2,15 @@
 
 {% block title %}Index{% endblock %}
 
-<div style="background-color: #f2f2f2; padding: 15px; margin-bottom: 30px; margin-top: 20px;">
+<div style="background-color: #f2f2f2; padding: 15px;margin-bottom: 30px; margin-top: 20px;">
 {% block page_content %}
 <div style="width:75%; margin-left:auto; margin-right:auto;">
     <h2>Последние работы</h2>
 </div>
-{% include "_post.html" %}
-{% include "_post.html" %}
-{% include "_post.html" %}
+<div style="width:75%; margin:auto;">
+    {% include "embed/_post.html" %}
+    {% include "embed/_post.html" %}
+    {% include "embed/_post.html" %}
+</div>
 {% endblock %}
 </div>
