--- a/app/static/style.css
+++ b/app/static/style.css
@@ -26,6 +26,20 @@ label {
     color: #cccccc;
 }
 
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #878787;
+  margin: 1em 0;
+  padding: 0;
+}
+
+p {
+    color: #cccccc;
+    font-size: 14px;
+}
+
 .text_preview {
     margin-left: auto;
     margin-right: auto;
