--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -4,24 +4,32 @@
 
 <div style="background-color: #f2f2f2; padding: 15px; margin-bottom: 30px; margin-top: 20px;">
 {% block page_content %}
-    <div style="width:75%; margin-left:auto; margin-right:auto;">
-        <h2 style="color:#f2f2f2">Поиск</h2>
-        <input></input>
-        <h3 style="color:#f2f2f2">Фильтры</h3>
-        <div class="search-container">
-            <p style="margin-top: 20px;">Работа по выбранному фандому:</p>
-            <input list="fandoms" name="fandom">
-            <datalist id="fandoms">
-                <option value="The Witcher">Ведьмак</option>
-                <option value="Original">Ориджинал</option>
-            </datalist>
-            <p style="margin-top: 20px;">Работа содержит жанры:</p>
-            {% include "embed/_genres.html" %}
-            <p style="margin-top: 20px;">Работа соответствует выбранным возрастным ограничениям:</p>
-            {% include "embed/_age_restr.html" %}
+<div style="width:75%; margin-left:auto; margin-right:auto;">
+    <h2 style="color:#f2f2f2">Поиск</h2>
+    <input></input>
+    <h3 style="color:#f2f2f2">Фильтры</h3>
+    <div class="search-container">
+        <p style="margin-top: 20px;">Работа по выбранному фандому:</p>
+        <input list="fandoms" name="fandom">
+        <datalist id="fandoms">
+            <option value="The Witcher">Ведьмак</option>
+            <option value="Original">Ориджинал</option>
+        </datalist>
+        <p>Работа содержит жанры:</p>
+        {% for tag in tags %}
+        <div>
+            <input type="checkbox" name={{tag.name}} value={{tag.name}}><label>{{tag.rus_name}}</label>
         </div>
-        <button style="margin-top: 20px;">Искать</button>
-
+        {% endfor %}
+        <p style="margin-top: 20px;">Работа соответствует выбранным возрастным ограничениям:</p>
+        {% for age_restr in age_restrs %}
+        <div>
+            <input type="checkbox" name={{age_restr}} value={{age_restr}}><label>{{age_restr}}</label>
+        </div>
+        {% endfor %}
     </div>
+    <button style="margin-top: 20px;">Искать</button>
+
+</div>
 {% endblock %}
 <div>
