--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -5,30 +5,33 @@
 <div style="background-color: #f2f2f2; padding: 15px; margin-bottom: 30px; margin-top: 20px;">
 {% block page_content %}
 <div style="width:75%; margin-left:auto; margin-right:auto;">
-    <h2 style="color:#f2f2f2">Поиск</h2>
-    <input></input>
-    <h3 style="color:#f2f2f2">Фильтры</h3>
-    <div class="search-container">
+    <form method="POST">
+        <h2 style="color:#f2f2f2">Поиск</h2>
+        <input></input>
+        <h3 style="color:#f2f2f2">Фильтры</h3>
         <p style="margin-top: 20px;">Работа по выбранному фандому:</p>
         <input list="fandoms" name="fandom">
         <datalist id="fandoms">
-            <option value="The Witcher">Ведьмак</option>
-            <option value="Original">Ориджинал</option>
+            {% for fandom in fandoms%}
+            <option value={{fandom.name}}>{{fandom.rus_name}}</option>
+            {% endfor %}
+            <!-- <option value="The Witcher">Ведьмак</option> -->
+            <!-- <option value="Original">Ориджинал</option> -->
         </datalist>
         <p>Работа содержит жанры:</p>
         {% for tag in tags %}
         <div>
-            <input type="checkbox" name={{tag.name}} value={{tag.name}}><label>{{tag.rus_name}}</label>
+            <input type="checkbox" name="tags" value={{tag.name}}><label>{{tag.rus_name}}</label>
         </div>
         {% endfor %}
         <p style="margin-top: 20px;">Работа соответствует выбранным возрастным ограничениям:</p>
         {% for age_restr in age_restrs %}
         <div>
-            <input type="checkbox" name={{age_restr}} value={{age_restr}}><label>{{age_restr}}</label>
+            <input type="checkbox" name="age_restr" value={{age_restr}}><label>{{age_restr}}</label>
         </div>
         {% endfor %}
-    </div>
-    <button style="margin-top: 20px;">Искать</button>
+        <input type="submit" name="submit" value="Искать">
+    </form>
 
 </div>
 {% endblock %}
