--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block title %}Index{% endblock %}
 
-<div style="background-color: #f2f2f2; padding: 15px;margin-bottom: 30px; margin-top: 20px;">
+<div class="page-box">
 {% block page_content %}
 <div style="width:75%; margin-left:auto; margin-right:auto;">
     <h2>Последние работы</h2>
