--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -7,30 +7,30 @@
 <div style="width:75%; margin-left:auto; margin-right:auto;">
     <form method="POST">
         <h2 style="color:#f2f2f2">Поиск</h2>
-        <input></input>
+        <input name=title>
         <h3 style="color:#f2f2f2">Фильтры</h3>
         <p style="margin-top: 20px;">Работа по выбранному фандому:</p>
         <input list="fandoms" name="fandom">
         <datalist id="fandoms">
-            {% for fandom in fandoms%}
-            <option value={{fandom.name}}>{{fandom.rus_name}}</option>
-            {% endfor %}
+            <!-- {% for fandom in fandoms%} -->
+            <!-- <option value={{fandom.name}}>{{fandom.rus_name}}</option> -->
+            <!-- {% endfor %} -->
             <!-- <option value="The Witcher">Ведьмак</option> -->
             <!-- <option value="Original">Ориджинал</option> -->
         </datalist>
         <p>Работа содержит жанры:</p>
         {% for tag in tags %}
         <div>
-            <input type="checkbox" name="tags" value={{tag.name}}><label>{{tag.rus_name}}</label>
+            <input type="checkbox" name=tags value={{tag.name}}><label>{{tag.rus_name}}</label>
         </div>
         {% endfor %}
-        <p style="margin-top: 20px;">Работа соответствует выбранным возрастным ограничениям:</p>
+        <p style="margin-top: 20px;">Работа подпадает под возрастное ограничение:</p>
         {% for age_restr in age_restrs %}
         <div>
-            <input type="checkbox" name="age_restr" value={{age_restr}}><label>{{age_restr}}</label>
+            <input type="radio" name=age_restr value={{age_restr}}><label>{{age_restr}}</label>
         </div>
         {% endfor %}
-        <input type="submit" name="submit" value="Искать">
+        <input type="submit" name=submit value="Искать">
     </form>
 
 </div>
