--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,6 +4,7 @@
 
 {% block page_content %}
 <div style="width:75%; margin:auto;">
+
     {% if current_user.role_id == 1  and current_user.id != user.id %}
     <form method='POST'>
         {% if user.role_id == 2 %}
@@ -27,6 +28,11 @@
         <p><b>Дата публикации:</b> {{text.release_date}}</p>
         <hr>
         <p>{{text.descr}}</p>
+        {% if current_user.id == user.id %}
+        <form method='POST'>
+        <button name=remove value={{text.id}} style="padding:0; color:#ff7f50">Удалить</button>
+        </form>
+        {% endif %}
     </div>
     {% endfor %}
     {% endif %}
