specify age restrictions on upload

--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -34,10 +34,9 @@
         </div>
         {% endfor %}
         <p>Краткое описание работы: </p>
-        <textarea name="descr" onkeyup="this.value=this.value.substring(0,250);"></textarea>
+        <textarea name="descr"></textarea>
         <p>Текст работы</p>
         <textarea name="text"></textarea>
-        <!-- <input type="submit" name="submit" value="Добавить"> -->
         <button name=submit value="upload">Добавить</button>
     </form>
 
