--- a/app/templates/text_view.html
+++ b/app/templates/text_view.html
@@ -6,8 +6,8 @@
 <div style="width:75%; margin:auto;">
     <h2>{{text.title}}</h2>
     <p><b>Автор(ы):</b> {% for user in text.get_authors() %} <a href="/user/{{user.username}}"> {{user.username}}</a>{% endfor %}</p>
-    <div>
-        <p>{{text.text_file}}
+    <div style="background-color: #474646; border-radius: 3px;">
+        <p style="font-size:1.1em; padding: 20px;">{{text.text_file}}
     </div>
 </div>
 {% endblock %}
